# animesphere

./: .gitignore  Cargo.toml  README.md  build.rs  build_release.ps1  build_release_apk.ps1  mobile.toml
.github/workflows/: build.yml
assets/: generate_icon.ps1  icon.rgba
browser-extension/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
browser-extension/public/: manifest.json
browser-extension/src/: background.ts  content.ts  index.css  popup.tsx
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: app.tsx  index.css  main.tsx
frontend/src/app/: App.tsx  tabRegistry.ts
frontend/src/app/providers/: index.tsx
frontend/src/app/services/: LibraryService.ts  PlaybackService.ts  SettingsService.ts  container.ts
frontend/src/app/services/providers/: AniLibertyProvider.ts  AnimeGoProvider.ts  AnimeVostProvider.ts  BaseProvider.ts  CollapsDashProvider.ts  CollapsProvider.ts  JutSuProvider.ts  KodikProvider.ts  ShikimoriProvider.ts  registry.ts
frontend/src/app/styles/: index.css
frontend/src/components/: SettingsModal.tsx
frontend/src/components/Player/: Anime4kPanel.tsx  EpisodeDrawer.tsx  NerdStatsOverlay.tsx  PlayerContextMenu.tsx
frontend/src/entities/anime/: index.ts
frontend/src/entities/anime/model/: store.ts  types.ts
frontend/src/entities/playback/: index.ts
frontend/src/entities/playback/model/: actions.ts  store.ts  types.ts
frontend/src/entities/ui/: index.ts
frontend/src/entities/ui/model/: store.ts
frontend/src/entities/user/: index.ts
frontend/src/entities/user/model/: store.ts
frontend/src/features/friends/: index.ts
frontend/src/features/friends/ui/: FriendsTab.tsx
frontend/src/features/logs/: index.ts
frontend/src/features/logs/ui/: LogsTab.tsx
frontend/src/features/playback-control/: index.ts
frontend/src/features/playback-control/model/: usePlayback.ts
frontend/src/features/search/: index.ts
frontend/src/features/search/model/: store.ts  useSearch.ts
frontend/src/features/search/ui/: AltSearchOverlay.tsx  SearchTab.tsx
frontend/src/features/settings/: index.ts
frontend/src/features/settings/model/: store.ts  useSettings.ts
frontend/src/features/settings/ui/: SettingsTab.tsx
frontend/src/features/sync/: index.ts
frontend/src/features/sync/model/: store.ts
frontend/src/hooks/: useLibrary.ts  usePlayback.ts  useSettings.ts
frontend/src/lib/: ipc.ts  utils.ts
frontend/src/shared/di/: container.ts  context.tsx
frontend/src/shared/ipc/: MockIpcTransport.ts  NativeIpcTransport.ts  index.ts  mockHandlers.ts  types.ts
frontend/src/shared/lib/: utils.ts
frontend/src/shared/proto/: anime.d.ts  anime.js
frontend/src/shared/store/: jotaiStore.ts
frontend/src/shared/types/: index.ts
frontend/src/shared/ui/: AnimeCard.tsx
frontend/src/types/: index.ts
frontend/src/widgets/header/ui/: Header.tsx
frontend/src/widgets/metadata-overlay/: index.ts
frontend/src/widgets/metadata-overlay/ui/: MetadataOverlay.tsx
frontend/src/widgets/player/: index.ts
frontend/src/widgets/player/ui/: Anime4kPanel.tsx  EpisodeDrawer.tsx  NerdStatsOverlay.tsx  PlayerContextMenu.tsx  PlayerOverlay.tsx  QualityPanel.tsx  SyncDrawer.tsx
frontend/src/widgets/sidebar/ui/: Sidebar.tsx
frontend/src/widgets/support-modal/: index.ts
frontend/src/widgets/support-modal/ui/: SupportModal.tsx
migrations/2026-06-16-000000_create_tables/: down.sql  up.sql
mpv-client-cross/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  README.md
mpv-client-cross-sys/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  build.rs  pregenerated_bindings.rs  pregenerated_bindings_dyn_sym.rs
mpv-client-cross/src/: error.rs  format.rs  lib.rs  logging.rs  node.rs  options.rs
proto/: anime.proto
src/: di.rs  error.rs  lib.rs  local_server.rs  main.rs  schema.rs
src/services/: aniliberty.rs  animego.rs  animevost.rs  bestsimilar.rs  collaps.rs  config.rs  discord_presence.rs  grpc_anime.rs  headless.rs  jutsu.rs  kodik.rs  mod.rs  mpv_player.rs  provider_manager.rs  shikimori.rs  thumbnail_generator.rs
src/window/: app.rs  helpers.rs  ipc.rs  logs.rs  mod.rs  protocol.rs  types.rs
