[package]
name = "animesphere"
version = "0.1.0"
edition = "2021"

[dependencies]
# Desktop Windowing and Webview
tao = "0.30"
wry = "0.50"

# Compile-time Dependency Injection
shaku = { version = "0.6.2", features = ["derive"] }

# Asynchronous runtime
tokio = { version = "1.39", features = ["full"] }
futures = "0.3"

# gRPC & Protobuf serialization
tonic = { version = "0.12", features = ["tls", "transport"] }
prost = "0.13"

# Native Multimedia Playback (MPV bindings)
libmpv2 = "6.0.0"

# Structuring & Parsing
async-trait = "0.1"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
scraper = "0.27.0"
html-escape = "0.2"

[build-dependencies]
tonic-build = "0.12"
